kubernetes/automation/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: k8s.gcr.io/external-dns/external-dns:v0.11.0
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=ctf.maplebacon.org
            - --provider=google
            - --google-project=maplectf-2022
            - --google-zone-visibility=public
            - --policy=upsert-only
            - --registry=txt
            - --txt-owner-id=external-dns
          volumeMounts:
            - name: google-service-account
              mountPath: /etc/secrets/service-account/
      volumes:
        - name: google-service-account
          secret:
            secretName: gcp-external-dns-sa
