kubernetes/automation/jenkins.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
    networking.gke.io/managed-certificates: jenkins-ssl-certificate
spec:
  rules:
    - host: gg8nsxv93zdacu2sy3e6.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
